--- a/src/components/testHook/PeerElement.css
+++ b/src/components/testHook/PeerElement.css
@@ -3,7 +3,5 @@
 }
 
 .video {
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
+    object-fit: cover;
 }
